k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: weblaunch
  labels:
    name: weblaunch
    managed-by: weblaunch
